Fix: legal text too large

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -81,4 +81,5 @@ vellum-doc::part(index-h4) {
 
 #document footer {
   border-top: 1px solid;
+  font-size: small;
 }
